# ARBITER

./: .env.example  .gitignore  AGENTS.md  ARBITER_INIT_PRD.md  CLAUDE.md  CONTEXT.md  QA_TRACE_BUNDLE_PRD.md  README.md  pyproject.toml
arbiter/: __init__.py  cli.py  config.py  eligibility.py  manifest.py  models.py  token_budgeting.py
arbiter/arbiter_algorithm/: __init__.py  branching.py  decision_tables.py  rollup.py
arbiter/confidence/: __init__.py  quote_verifier.py  signals.py
arbiter/graph/: __init__.py  builder.py  state.py
arbiter/ingestion/: __init__.py  ctgov.py  metadata_extractor.py  paper.py  supplements.py
arbiter/llm/: __init__.py  anthropic_client.py  base.py  factory.py  mock_client.py  openai_client.py  openrouter_client.py
arbiter/observability/: __init__.py  cost.py  qa_trace.py  trace.py
arbiter/output/: __init__.py  json_writer.py  report_writer.py  sqlite_writer.py
arbiter/prompts/: __init__.py  sq_prompts.py
arbiter/retrieval/: __init__.py  annotator.py  segmenter.py  supplement_index.py
docs/adr/: 0001-overall-judgment-some-concerns-threshold.md  0002-gated-supplement-annotation.md  0003-supplement-segmentation-uses-document-heading-signals.md
docs/agents/: domain.md  triage-labels.md
docs/rob2/: README.md
eval/: run_eval.py
eval/reference/: README.md  manifest.csv
tests/integration/: test_req22_integration.py
tests/unit/: test_assessment_orchestration.py  test_cli.py  test_confidence_signals.py  test_context_assembly.py  test_ctgov_ingestion.py  test_eval_harness.py  test_llm_clients.py  test_manifest_batch.py  test_metadata_extractor.py  (+10 more)
(+4 files in other folders)
