[project]
name = "arbiter"
version = "0.1.0"
description = "Automated Cochrane RoB 2 assessment pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "click>=8.4.1",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "json-repair>=0.61.0",
    "langchain-core>=1.4.6",
    "langgraph>=1.2.4",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
arbiter = "arbiter.cli:cli"

[project.optional-dependencies]
anthropic = [
    "langchain-anthropic>=1.4.6",
]
openai = [
    "langchain-openai>=1.3.0",
]
openrouter = [
    "langchain-openrouter>=0.2.3",
]
all = [
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.0",
    "langchain-openrouter>=0.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
